change girhub urls

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ footer:
 seo:
   meta_og_title: "Thomas Kimble"
   meta_og_type: "website"
-  meta_og_url: "https://thomaskimble.github.io/"
+  meta_og_url: "https://thomasoliverkimble.github.io/"
   meta_og_image: "https://raw.githubusercontent.com/zerostaticthemes/jekyll-serif-theme/master/screenshots/tn.png"
   meta_og_description: "Thomas Kimble | Project Page"
 
